fixed squashed google maps controls

--- a/wv/themes/roots-wv/assets/less/app.less
+++ b/wv/themes/roots-wv/assets/less/app.less
@@ -24,11 +24,6 @@ body {}
 
 /*this is to not squash gmaps controls */
 
-#map-canvas img {
-    max-width: none!important; 
-}
-
-
 
 .brick { 
   width: 300px; 
@@ -66,10 +61,14 @@ body {}
   }
 
   
-  #map-canvas {
+  #map_canvas {
     height: 400px;
     margin: 0px;
-    padding: 0px
+    padding: 0px;
+    img {
+        max-width: none!important; 
+        max-height: none!important;
+    }
   }
 
 }
